Fixed alignment of first navigation link in site header

--- a/styles/sass/layout.scss
+++ b/styles/sass/layout.scss
@@ -36,6 +36,10 @@ nav#site-navigation {
     list-style: none;
     display: inline-block;
     padding-left: 10px;
+
+    &:first-child {
+      padding: 0;
+    }
   }
 }
 
